Publish the plugin to plugin portal
Use the correct task to publish to the portal: https://docs.gradle.org/current/userguide/publishing_gradle_plugins.html#publish_your_plugin_to_the_plugin_portal

And also fix the typo in README.

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,4 +28,4 @@ jobs:
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
         uses: burrunan/gradle-cache-action@v1
         with:
-          arguments: publish
+          arguments: publishPlugins
