--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id("groovy-gradle-plugin")
     id("maven-publish")
-    id("com.gradle.plugin-publish").version("0.20.0")
+    id("com.gradle.plugin-publish").version("1.1.0")
 }
 
 group = "co.bound"
-version = "1.0.1"
+version = "1.0.2"
 
 tasks.named("publish") {
     dependsOn("check")
@@ -17,30 +17,26 @@ tasks.named("test") {
 }
 
 dependencies {
-    implementation("software.amazon.awssdk:codeartifact:2.17.146")
+    implementation("software.amazon.awssdk:codeartifact:2.20.14")
 
-    testImplementation(platform("org.spockframework:spock-bom:2.1-groovy-3.0"))
+    testImplementation(platform("org.spockframework:spock-bom:2.3-groovy-3.0"))
     testImplementation("org.spockframework:spock-core")
-    testImplementation("com.github.tomakehurst:wiremock-jre8-standalone:2.32.0")
-}
-
-pluginBundle {
-    website = "https://github.com/boundrates/codeartifact-gradle-plugin"
-    vcsUrl = "https://github.com/boundrates/codeartifact-gradle-plugin"
-
-    description = "Plugins for authenticating with and using AWS CodeArtifact Maven repositories for consuming project plugins, project dependencies as well as publishing artifacts."
-    tags = ["aws", "codeartifact", "publishing"]
+    testImplementation("com.github.tomakehurst:wiremock-jre8-standalone:2.35.0")
 }
 
 gradlePlugin {
+    website = "https://github.com/boundrates/codeartifact-gradle-plugin"
+    vcsUrl = "https://github.com/boundrates/codeartifact-gradle-plugin"
     afterEvaluate {
         plugins {
             def codeartifactPlugin = it.findByName("co.bound.codeartifact")
             codeartifactPlugin.displayName = "A settings plugin that configures AWS CodeArtifact repository"
             codeartifactPlugin.description = "Configures AWS CodeArtifact Maven repository as source for project plugins and project dependencies."
+            codeartifactPlugin.tags.set(["aws", "codeartifact"])
             def codeartifactPublishPlugin = it.findByName("co.bound.codeartifact-publish")
             codeartifactPublishPlugin.displayName = "A project plugin for publishing artifacts to AWS CodeArtifact repository"
             codeartifactPublishPlugin.description = "Configures AWS CodeArtifact Maven repository for artifact publishing. Requires co.bound.codeartifact settings plugin to be applied and configured."
+            codeartifactPublishPlugin.tags.set(["aws", "codeartifact", "publishing"])
         }
     }
 }
