--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,7 @@ name: plugin-continuous-delivery
 concurrency: plugin-pipeline
 
 on:
-  push:
-    branches-ignore: [ "master" ]
-  pull_request:
-    branches-ignore: [ "master" ]
+  pull_request_target:
 
 jobs:
   build:
