--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,11 +1,12 @@
 plugins {
-    id("groovy-gradle-plugin")
+    id("java-gradle-plugin")
+    id("groovy")
     id("maven-publish")
     id("com.gradle.plugin-publish").version("1.2.0")
 }
 
 group = "co.bound"
-version = "1.3.1"
+version = "1.3.2"
 
 tasks.named("publish") {
     dependsOn("check")
@@ -14,9 +15,14 @@ tasks.named("publish") {
 tasks.named("test", Test) {
     useJUnitPlatform()
     testLogging.exceptionFormat = 'full'
+    testLogging.events("started", "skipped", "failed")
     def tmpDir = file("$buildDir/tmp/test/work")
     tmpDir.mkdirs()
     systemProperty 'java.io.tmpdir', tmpDir
+}
+
+tasks.withType(Javadoc).configureEach {
+    enabled = false
 }
 
 dependencies {
