--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -3,10 +3,12 @@ plugins {
     id("groovy")
     id("maven-publish")
     id("com.gradle.plugin-publish").version("1.2.0")
+    // should be same version as org.gradle.kotlin.dsl.support.KotlinDslPluginsKt.expectedKotlinDslPluginsVersion
+    id("org.gradle.kotlin.kotlin-dsl").version("4.0.7")
 }
 
 group = "co.bound"
-version = "1.3.2"
+version = "1.4.0"
 
 tasks.named("publish") {
     dependsOn("check")
