--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,6 @@ jobs:
           distribution: 'temurin'
 
       - name: Build
-        uses: burrunan/gradle-cache-action@v1
+        uses: burrunan/gradle-cache-action@3bf23b8dd95e7d2bacf2470132454fe893a178a1 # v1
         with:
           arguments: build
